API info, overview page readability improvements, truncation, resizing limit fixes

--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/store/site/themes/wso2/css/custom.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/store/site/themes/wso2/css/custom.css
@@ -233,7 +233,22 @@ a.remove_rating:hover{
 .remove_rating i{
     margin-top: -3px;
 }
+.resize-vertical-only{
+    resize:vertical;
+}
 
+.truncate-children {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    white-space: nowrap;
+}
+
+.truncate-children > * {
+    display: table-cell;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 /* =============================================================================
  * Same height columns support
